--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <!-- Research Scholar · <a href="https://www.iitdh.ac.in">IIT Dharwad</a> -->
                         <a href="mailto:tephilla.prince.18@iitdh.ac.in">tephilla.prince.18@iitdh.ac.in</a>
                     </div>
-                    <p class="lead mb-5">I am a Ph.D. scholar in the Department of Computer Science and Engineering, with <a href="https://iitdh.ac.in/prb/">Prof. Ramchandra Phawade </a>at <a href="https://www.iitdh.ac.in">IIT Dharwad</a> working broadly in the area of formal verification, specializing in the intersection of logic,  automata theory and concurrency theory. Also enjoy building verification tools.</p>
+                    <p class="lead mb-5">I am a Ph.D. scholar in the Department of Computer Science and Engineering, with <a href="https://iitdh.ac.in/prb/">Prof. Ramchandra Phawade </a> and Prof. S. Sheerazuddin at <a href="https://www.iitdh.ac.in">IIT Dharwad</a> working broadly in the area of formal verification, specializing in the intersection of logic,  automata theory and concurrency theory. Also enjoy building verification tools.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://linkedin.com/in/tephillaprince"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://twitter.com/tephillaprince"><i class="fab fa-twitter"></i></a>                        
